update terminal - minor

--- a/AVU.html
+++ b/AVU.html
@@ -14,7 +14,7 @@
     <a class="active" href="/AVU.html">Home</a>
     <a href="AVU/blacklist/index.html">Blacklist</a>
     <a href="AVU/guide/guide.html">Guide</a>
-    <a href="#">For security reasons, you can't have access to unis in this menu</a>
+    <a href="#">FAQ (soon)</a>
   </div>
 </header>
 <body>
@@ -107,7 +107,7 @@
       border: 1px solid #00ff00;
       border-radius: 4px;
       overflow: auto;
-      max-height: 200px;
+      max-height: 250px;
     }
     
     .terminal pre {
@@ -213,13 +213,20 @@ h2 {
     <div class="terminal">
       <pre>
         <code>
-        <span style="color: #ff0000;">root@sendcode3$</span> <span style="color: #00ff00;">sudo sendcode3</span>
+        <span style="color: #ff0000;">> root@sendcode3$</span> <span style="color: #00ff00;">sudo sendcode3</span>
         <span style="color: #00ff00;">[sudo] password to comfirm:</span> ********
-        <span style="color: #00ff00;">Contacting AVU</span>
-        <span style="color: #00ff00;">Help granted.</span>
+        <span style="color: #00ff00;">22.08.23 - 14:32.37 | Contacting AVU</span>
+        <span style="color: #00ff00;">22.08.23 - 14:34.54 | Help granted.</span>
         <span style="color: #ff0000;">------</span>
-        <span style="color: #ff0000;">202 : accepted</span>
-        </code>
+        <span style="color: #00ff00;">> launch alphaProject /rn /t 1</span>
+        <span style="color: #ff0000;">01.09.23 - 02:33.21 | 202 : accepted</span>
+        <span style="color: #ff0000;">------</span>
+        <span style="color: #00ff00;">13.10.23 - 17:30.01 | Received Telegraph:</span>
+          <span style="color: #00ff00;">|_ Report n°45 by Agent 1st class. David</span>
+          <span style="color: #00ff00;">|_ Encrypted : true</span>
+          <span style="color: #00ff00;">|_ Object: Virus</span>
+          <span style="color: #00ff00;">\_ Decrypted safely: true</span>
+      </code>
       </pre>
     </div>
   </div>
