--- a/AVU.html
+++ b/AVU.html
@@ -14,6 +14,7 @@
     <a class="active" href="/AVU.html">Home</a>
     <a href="AVU/blacklist/index.html">Blacklist</a>
     <a href="AVU/guide/guide.html">Guide</a>
+    <a href="AVU/credit.html">Credit</a>
     <a href="#">FAQ (soon)</a>
   </div>
 </header>
