--- a/AVU.html
+++ b/AVU.html
@@ -15,7 +15,7 @@
     <a href="AVU/blacklist/index.html">Blacklist</a>
     <a href="AVU/guide/guide.html">Guide</a>
     <a href="AVU/credit.html">Credit</a>
-    <a href="#">FAQ (soon)</a>
+    <a href="#">For security reason, you can have access on this page</a>
   </div>
 </header>
 <body>
