update - minor change

--- a/macromania/index.html
+++ b/macromania/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <ul>
-            <li class="lolli"><img src="img/logo/micromaniaLogo.png" alt="logo"></li>
-            <li class="lolli"><a href="#home">Accueil</a></li>
-            <li class="lolli"><a href="#news">Jeux</a></li>
-            <li class="lolli"><a href="#contact">Accessoires</a></li>
-            <li class="lolli" style="float:right"><a class="active" href="#about">Se connecter</a></li>
+            <li class="navbar"><img src="img/logo/micromaniaLogo.png" alt="logo"></li>
+            <li class="navbar"><a href="#home">Accueil</a></li>
+            <li class="navbar"><a href="#news">Jeux</a></li>
+            <li class="navbar"><a href="#contact">Accessoires</a></li>
+            <li class="navbar" style="float:right"><a class="active" href="#about">Se connecter</a></li>
         </ul>
     </header>
     <p>Total visits: <span id="visit-counter"></span></p>
@@ -34,12 +34,14 @@
                 une expérience sans pareille.</b></p>
     </div>
     <div class="including">
-        <p> Ce pack contient:<br>   Team Fortress 2<br>   Half-Life 2<br>   Half-Life 2: Episode One<br>   Half-life 2:
-            Episode Two<br>   Portal</p>
+        <p> Ce pack contient:<br>   Team Fortress 2 : N/A<br>   Half-Life 2 : 9,75€<br>   Half-Life 2: Episode One : 7,79€<br>   Half-life 2:
+            Episode Two : 6.59<br>   Portal : 9.75€</p>
     </div>
 
     <h2 class="price">19,50€</h2>
-    <button class="button">Achetez Maintenent</button>
+    <h4>Prix individuel des produits: 33,88€ </h4>
+    <h3>Vous économisez <span style="color: #00aa00;">14,38€ </span>en achetant ce package</h3>
+    <button class="button"><a href="https://store.steampowered.com/sub/469">Achetez Maintenent sur Steam</a></button>
     <h2>Information Complémentaires</h2>
 
     <div class="Genres">
