--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>I likes bread and frienly person. <br><br> if you're here to talk about my past, go away and don't talk to me. </p>
+    <p>. . .</p>
   </div>
 
 </div>
@@ -117,7 +117,7 @@
   <br>
   <a href="https://twitter.com/betawolfy_" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fab fa-twitter">&nbsp;</i>twitter</a>
   <br>
-  <a href="http://betawolfy.me/AVU.html" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fa fa-code">&nbsp;</i>My current project (random lore number 3)</a>
+  <a href="http://betawolfy.me/macromania" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fa fa-code">&nbsp;</i>My current project from school</a>
 </div>
         <!--------------------Footer---------------------------->
   <div class="footer mt-5">
