--- a/index.html
+++ b/index.html
@@ -1,127 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="https://res.cloudinary.com/phonerefer/image/upload/v1575096088/ve0o2n85nfvgdatgqer2.jpg" />
+  <link rel="shortcut icon" href="/AVU/__toCredit/EnlistedIcon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#343a40" />
- 
-  
-     <meta content="Betawolfy - My links" property="og:title" />
-    <meta content="A little presentation of me and somes of my link." property="og:description" />
-    <meta content="http://betawolfy.me/" property="og:url" />
-    <meta content="https://i.imgur.com/3OtSV0X.png" property="og:image" />
-    <meta content="#3b0000" data-react-helmet="true" name="theme-color" />
-  
-  
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-     <title>Betawolfy.me</title>
-     <style>
-       body{
-         background-color: #faf8ef;
-       }
-       h5{
-             color: #343a40;
-       }
-       .name{
-           color: #343a40;
-       }
-       .love{
-           color: #343a40 !important;
-       }
-       /*----------------- Mail-------------------- */
-       #email{
-           text-decoration: none;
-           float: right;
-           color:#343a40;
-       }
-       .footer{
-           margin-top: 5% !important;
-           margin-bottom: 10px;
-       }
-       @media (max-width: 479px) {
-            .footer{
-            margin-top: 35% !important;
-            }
-       }
-       
-  .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
 
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
+  <meta content="Betawolfy - My links" property="og:title" />
+  <meta content="A little presentation of me and somes of my link." property="og:description" />
+  <meta content="http://betawolfy.xyz/" property="og:url" />
+  <meta content="https://i.imgur.com/3OtSV0X" property="og:image" />
+  <meta content="#3b0000" data-react-helmet="true" name="theme-color" />
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-     </style>
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>Betawolfy</title>
+  <style>
+    body {
+      background-color: #faf8ef;
+    }
+
+    h5 {
+      color: #343a40;
+    }
+
+    .name {
+      color: #343a40;
+    }
+
+    .love {
+      color: #343a40 !important;
+    }
+
+    /*----------------- Mail-------------------- */
+    #email {
+      text-decoration: none;
+      float: right;
+      color: #343a40;
+    }
+
+    .footer {
+      margin-top: 5% !important;
+      margin-bottom: 10px;
+    }
+
+    @media (max-width: 479px) {
+      .footer {
+        margin-top: 35% !important;
+      }
+    }
+
+    .modal {
+      display: none;
+      /* Hidden by default */
+      position: fixed;
+      /* Stay in place */
+      z-index: 1;
+      /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%;
+      /* Full width */
+      height: 100%;
+      /* Full height */
+      overflow: auto;
+      /* Enable scroll if needed */
+      background-color: rgb(0, 0, 0);
+      /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.4);
+      /* Black w/ opacity */
+    }
+
+    /* Modal Content/Box */
+    .modal-content {
+      background-color: #fefefe;
+      margin: 15% auto;
+      /* 15% from the top and centered */
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+      /* Could be more or less, depending on screen size */
+    }
+
+    /* The Close Button */
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  </style>
 </head>
+
 <body>
-<div class="container">
-  <div class="media mt-5">
-    <img src="https://i.imgur.com/3OtSV0X.png" class="m-3" alt="image" width="75px" height="75px">
-    <div class="media-body m-2">
-      <h5 class="align-items-center mt-2">Betawolfy</h5>
-      <p>Hello!
-      I am Betawolfy
-      Young Developer, Making a Discord bot and a platform website.<br> I have ADHD. Feel free to add me on Discord.
-      Maybe i'll make you a discord Bot. will i be able to make a card like thing? idk ;-;</p>
+  <div class="container">
+    <div class="media mt-5">
+      <img src="/assets/img/me.gif" class="m-3" alt="image" width="100px" height="100px">
+      <div class="media-body m-2">
+        <h5 class="align-items-center mt-2">Betawolfy</h5>
+        <p>Hello!
+          I am Betawolfy (Vincent), i'm 18 years old! I'm a Devlopper that have ADHD, but it doesn't stop me to create!<br>Currently coding something to make a community more united!</p>
+      </div>
     </div>
-  </div>
-  <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
+    <!-- Trigger/Open The Modal -->
+    <!-- <button id="myBtn">Open Modal</button> -->
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
+    <!-- The Modal -->
+    <!-- <div id="myModal" class="modal">
 
-  <!-- Modal content -->
+  Modal content
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>. . .</p>
+    <p>11/03/2024:<br>if i have time, i'll redo this silly site.</p>
   </div>
 
-</div>
-  
-<div class="mt-4">
-  <a href="https://github.com/Betawolfy" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fab fa-github">&nbsp;</i>Github</a>
-  <!--<br>
+</div> -->
+    <center>
+      <h1>News:</h1>
+    </center>
+    <div class="container">
+      <div class="media-body m-2">
+        <h5 class="align-items-center mt-2">11/03/2024</h5>
+        <p> I'll retry to remake this site in a terminal theme. but for now, it will looks like this.</p>
+      </div>
+    </div>
+  </div>
+
+  <!--------------------Principal link---------------------------->
+
+  <div class="mt-4">
+    <a href="https://github.com/Betawolfy" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i
+        class="fab fa-github">&nbsp;</i>Github</a>
+    <!--<br>
   <a href="#" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fab fa-twitter">&nbsp;</i>twitter</a>-->
+    <br>
+    <a href="https://twitter.com/betawolfy_" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i
+        class="fab fa-twitter">&nbsp;</i>twitter</a>
+    <br>
+    <a href="mailto://betawolfy@antivirusunite.com" class="btn btn-outline-dark btn-block" role="button"
+      target="_blank"><i class="fa fa-code">&nbsp;</i>Professional Email address</a>
+  </div>
   <br>
-  <a href="https://twitter.com/betawolfy_" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fab fa-twitter">&nbsp;</i>twitter</a>
-  <br>
-  <a href="http://betawolfy.me/macromania" class="btn btn-outline-dark btn-block" role="button" target="_blank"><i class="fa fa-code">&nbsp;</i>My current project from school</a>
-</div>
-        <!--------------------Footer---------------------------->
+  <!--------------------Project--------------------------->
+
+  <center>
+    <h1>Project:</h1>
+  </center>
+  <div class="mt-4">
+    <div class="container">
+      <div class="media-body m-2">
+        <h5 class="align-items-center mt-2">My current personnal project: BLCKlist</h5>
+        <p>Blacklist and warning system for Ponytown regiment | Work In Progress</p>
+        <a href="https://github.com/Betawolfy/BLCKlist" class="btn btn-outline-dark btn-block" role="button"
+          target="_blank"><i class="fab fa-github">&nbsp;</i>depot github BLCKlist</a>
+          <a href="https://betawolfy.xyz/BLCKlistWRNs.pdf" class="btn btn-outline-dark btn-block" role="button"
+          target="_blank"><i class="fa fa-file-pdf">&nbsp;</i>explaination in PDF</a>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="media-body m-2">
+        <h5 class="align-items-center mt-2">Personal work : Antivirus, Unite!</h5>
+        <p>A group i made in the online MMORPG: Ponytown. <br>The site contain my first HTML code and my first use of Cookies/local data storage.</p>
+        <a href="https://antivirusunite.com" class="btn btn-outline-dark btn-block" role="button"
+        target="_blank"><i class="fa fa-globe">&nbsp;</i>antivirusunite.com</a>
+    </div>
+  </div>
+
+    <div class="container">
+      <div class="media-body m-2">
+        <h5 class="align-items-center mt-2">Personal work : Botty.js</h5>
+        <p>The first thing i did in Javascript. <br>A french discord bot to keep track of partners.</p>
+        <a href="https://github.com/Betawolfy/botty.js" class="btn btn-outline-dark btn-block" role="button"
+        target="_blank"><i class="fab fa-github">&nbsp;</i>Botty.js Github repo</a>
+    </div>
+  </div>
+
+    <div class="container">
+      <div class="media-body m-2">
+        <h5 class="align-items-center mt-2">School work: Java</h5>
+        <p>Currently learning Java. you can see my work here:</p>
+        <a href="https://github.com/Betawolfy/workAboutJava" class="btn btn-outline-dark btn-block" role="button"
+        target="_blank"><i class="fab fa-github">&nbsp;</i>BLCKlist Github repo</a>
+    </div>
+  </div>
+
+    <div class="container">
+      <div class="media-body m-2">
+        <h5 class="align-items-center mt-2">School work: Arduino</h5>
+        <p>During High school, i learned Arduino langage. <br>One of my project was to make a thermometer.</p>
+        <a href="https://github.com/Betawolfy/Mesure-temperature-relay-finale" class="btn btn-outline-dark btn-block" role="button"
+        target="_blank"><i class="fab fa-github">&nbsp;</i>Thermometer Github repo</a>
+    </div>
+  </div>
+
+
+
+  <!--------------------Footer---------------------------->
   <div class="footer mt-5">
-    <hr/>
+    <hr />
     <h6>Made With <span class="love">♥</span> by Betawofy!</h6>
     <h6>
       Proudly Hosted By
@@ -129,35 +218,35 @@
       <a id="email" href="mailto:contact.betawolft@gmail.com"> <i class="fa fa-envelope"> </i> </a>
     </h6>
   </div>
-</div>
+  </div>
 </body>
-  
+
 </html>
 
 <script>
-// Get the modal
-var modal = document.getElementById("myModal");
+  // Get the modal
+  var modal = document.getElementById("myModal");
 
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
+  // Get the button that opens the modal
+  var btn = document.getElementById("myBtn");
 
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
+  // Get the <span> element that closes the modal
+  var span = document.getElementsByClassName("close")[0];
 
-// When the user clicks on the button, open the modal
-btn.onclick = function() {
-  modal.style.display = "block";
-}
+  // When the user clicks on the button, open the modal
+  btn.onclick = function () {
+    modal.style.display = "block";
+  }
 
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function () {
     modal.style.display = "none";
   }
-}
+
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function (event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
 </script>
