--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="./AVU/__toCredit/EnlistedIcon.png" />
+  <link rel="icon" href="./AVU/__toCredit/EnlistedIcon.png" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#343a40" />
 
