Mise à jour des métadonnées de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="./AVU/__toCredit/EnlistedIcon.png" />
+  <link rel="shortcut icon" href="./AVU/__toCredit/EnlistedIcon.png" type="image/png"/>
   <link rel="icon" href="./AVU/__toCredit/EnlistedIcon.png" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#343a40" />
 
 
-  <meta content="Betawolfy - My links" property="og:title" />
-  <meta content="A little presentation of me and somes of my link." property="og:description" />
+  <meta content="Betawolfy" property="og:title" />
+  <meta content="Hello! I am Betawolfy (Vincent), i'm 18 years old! I'm a Devlopper that have ADHD, but it doesn't stop me to create!" property="og:description" />
   <meta content="http://betawolfy.xyz/" property="og:url" />
   <meta content="https://i.imgur.com/3OtSV0X" property="og:image" />
   <meta content="#3b0000" data-react-helmet="true" name="theme-color" />
