--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta content="Betawolfy" property="og:title" />
   <meta content="Hello! I am Betawolfy (Vincent), i'm 18 years old! I'm a Devlopper that have ADHD, but it doesn't stop me to create!" property="og:description" />
   <meta content="http://betawolfy.xyz/" property="og:url" />
-  <meta content="https://i.imgur.com/3OtSV0X" property="og:image" />
+  <meta content="https://i.imgur.com/3OtSV0X.png" property="og:image" />
   <meta content="#3b0000" data-react-helmet="true" name="theme-color" />
 
 
