Mise à jour des couleurs des boutons dans les thèmes clair et sombre

--- a/index.html
+++ b/index.html
@@ -120,29 +120,28 @@
 
     hr.dotted {
       border-top: 3px dotted #202020;
-
+    }
       body.light-theme .btn-outline-dark {
-        background-color: #faf8ef;
+        background-color: #eae7db;
         color: #343a40;
         border-color: #343a40;
       }
 
       body.light-theme .btn-outline-dark:hover {
         background-color: #343a40;
-        color: #faf8ef;
+        color: #eae7db;
       }
 
       body.dark-theme .btn-outline-dark {
-        background-color: #ffffff;
-        color: #faf8ef;
-        border-color: #faf8ef;
+        background-color: #343a40;
+        color: #eae7db;
+        border-color: #eae7db;
       }
 
       body.dark-theme .btn-outline-dark:hover {
-        background-color: #faf8ef;
+        background-color: #eae7db;
         color: #343a40;
       }
-    }
   </style>
 </head>
 
