Mise à jour des icônes et des métadonnées du site

--- a/beforeJoining.html
+++ b/beforeJoining.html
@@ -214,7 +214,7 @@ h2 {
         <code>
         <span style="color: #ff0000;">> root@sendcode3$</span> <span style="color: #00ff00;">sudo join</span>
         <span style="color: #00ff00;">[sudo] password to comfirm:</span> ********
-        <span style="color: #00ff00;">We are generating the invite link</span>
+        <span style="color: #00ff00;">We are generating the invite link . . . . . . . . </span>
         <span style="color: #00ff00;"> > here is the link: <a href="https://discord.gg/anQJqrTyt7">https://discord.gg/anQJqrTyt7</a></span>
       </code>
       </pre>
