--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="/EnlistedIcon.png" type="image/png" />
-  <link rel="icon" href="/EnlistedIcon.png" type="image/png" />
+  <link rel="favicon" href="/EnlistedIcon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#343a40" />
 
