--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <hr class="dotted">
     <!--------------------Principal link---------------------------->
 
-    <div class="container">
+    <div class="container" id="Contact">
       <div class="media-body m-2">
         <center>
           <h1>Contact me:</h1>
