--- a/ponytown/regiment/WSS.html
+++ b/ponytown/regiment/WSS.html
@@ -26,7 +26,7 @@
     <meta content="Everything you need to know about me, including Safe list and Before int with me!"
       property="og:description" />
     <meta content="http://betawolfy.me/ponytown/regiment/WSS.html" property="og:url" />
-    <meta content="https://i.imgur.com/U8gkdV7.png" property="og:image" />
+    <meta content="https://i.imgur.com/g5ujuy8.png" property="og:image" />
     <meta content="#3b0000" data-react-helmet="true" name="theme-color" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
