--- a/ponytown/regiment/WSS.html
+++ b/ponytown/regiment/WSS.html
@@ -140,7 +140,7 @@
           list if you do. Don't disrespect people pls.. ./lh
         <br>If you see me finishing a sentence with ".." it means that i'm not comfortable.
         <br>Don't ask me to do something if i'm not comfortable with it. I'll tell you if i'm not comfortable with it.
-        <br>Try to not rizz me.
+        <br>Try to not rizz me. and dont make me rizz anything. I'm not comfortable with it.
         <br>Please <b>BE CAREFUL!</b> on how you call me:
         <br>  - Don't call me <b>by my name</b> if you're not close friend to me
         <br>  - Don't use <b>sensitive names or word</b> to call/define me. "silly" and positive one are Ok tho!!
