putted Ian as Thin ice

--- a/ponytown/regiment/WSS.html
+++ b/ponytown/regiment/WSS.html
@@ -173,6 +173,8 @@
           <br> - Cypress <span class="badgeHT">Safe List</span>
           <br> - Diamond <span class="badgeHT">Safe List</span>
           <br> - Vae <span class="badgeHT">Safe List</span>
+          <br>
+          <br> - Ian <span class="badgeT">Thin ice</span>
 
           <p><b><i>You are not in the list?</i></b> We just need time to know each other! for now, please ask before int!</p>
 
